CMP-5024 #comment integrate with in-house artifactory server, disable embedded H2 for deployment to cloud-foundry, modify manifest to deploy to SEA PCF

--- a/manifest-dev.yml
+++ b/manifest-dev.yml
@@ -5,5 +5,5 @@ applications:
   instances: 1
   host: test-spring-dataflow-server
   domains:
-  - apps.eas.pcf.manulife.com
-  path: target/test-spring-dataflow-server-0.0.1-SNAPSHOT.jar
+  - apps.sea.preview.pcf.manulife.com
+  path: target/test-spring-dataflow-server-0.0.1.jar
