--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.example.jeffrey.localdataflowserver</groupId>
 	<artifactId>test-spring-dataflow-server</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<packaging>jar</packaging>
 
 	<name>test-spring-dataflow-server</name>
@@ -25,6 +25,8 @@
 
 		<spring-cloud-dataflow-dependencies.version>1.3.0.RELEASE</spring-cloud-dataflow-dependencies.version>
 		<hibernate.version>5.2.12.Final</hibernate.version>
+
+		<artifactory.url>https://artifactory.platform.manulife.io/artifactory</artifactory.url>
 	</properties>
 
 	<dependencyManagement>
@@ -47,6 +49,12 @@
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
+		</repository>
+
+		<!-- In-house repository server to lookup deployed dependencies -->
+		<repository>
+			<id>releases</id>
+			<url>${artifactory.url}/libs-release-local/</url>
 		</repository>
 	</repositories>
 
@@ -91,5 +99,13 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<!-- Deploy to in-house repository server when test passed -->
+	<distributionManagement>
+		<repository>
+			<id>releases</id>
+			<url>${artifactory.url}/libs-release-local/</url>
+		</repository>
+	</distributionManagement>
 
 </project>
