--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 spring.h2.console.settings.web-allow-others=true
 
-# H2 Datasource, default console runs on http://localhost:8080/h2
+# H2 Datasource, default console runs on http://localhost:9393/h2
 spring.datasource.url=jdbc:h2:file:~/test;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
 spring.datasource.username=sa
 spring.datasource.password=
@@ -15,3 +15,7 @@ spring.datasource.driver-class-name=org.h2.Driver
 # JPA (JpaBaseConfiguration, HibernateJpaAutoConfiguration)
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
+
+# Use an external H2 database instance instead of the H2 embedded with Spring Cloud Data Flow
+# when deployed to cloud-foundry
+#spring.dataflow.embedded.database.enable=true
