CMP-5024 #comment enable support for using in-house artifactory as maven repo

--- a/manifest-dev.yml
+++ b/manifest-dev.yml
@@ -7,3 +7,8 @@ applications:
   domains:
   - apps.sea.preview.pcf.manulife.com
   path: target/test-spring-dataflow-server-0.0.1.jar
+  env:
+    SPRING_APPLICATION_JSON: '{"maven": { "remote-repositories": { "repo1": { "url": "https://artifactory.platform.manulife.io/artifactory/libs-release-local"} } } }'
+  services:
+  - mysql-service
+  - redis-cache-service
