--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,4 @@ spring.jpa.generate-ddl=true
 
 # Use an external H2 database instance instead of the H2 embedded with Spring Cloud Data Flow
 # when deployed to cloud-foundry
-#spring.dataflow.embedded.database.enable=true
+#spring.dataflow.embedded.database.enable=false
