update README.md and scale up memory,disk-quota,max-concurrent-task for productionizing the SCDF server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,7 @@ spring.jpa.generate-ddl=true
 # Use an external H2 database instance instead of the H2 embedded with Spring Cloud Data Flow
 # when deployed to cloud-foundry
 #spring.dataflow.embedded.database.enable=false
+
+# Establish the maximum number of concurrently running tasks to prevent the saturation of IaaS/hardware resources
+# default 20 if not configured
+spring.cloud.dataflow.task.maximum-concurrent-tasks=200
