--- a/manifest-dev.yml
+++ b/manifest-dev.yml
@@ -1,7 +1,8 @@
 ---
 applications:
 - name: test-spring-dataflow-server
-  memory: 1G
+  memory: 4G
+  disk_quota: 4G
   instances: 1
   host: test-spring-dataflow-server
   domains:
