--- a/manifest-dev.yml
+++ b/manifest-dev.yml
@@ -11,5 +11,5 @@ applications:
   env:
     SPRING_APPLICATION_JSON: '{"maven": { "remote-repositories": { "repo1": { "url": "https://artifactory.platform.manulife.io/artifactory/libs-release-local"} } } }'
   services:
-  - mysql-service
+#  - mysql-service
   - redis-cache-service
