--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,22 @@
 # set the logging for spring cloud task to DEBUG to see the execution process:
 logging.level.org.springframework.cloud.task=DEBUG
 
-# H2 web admin console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
-spring.h2.console.settings.web-allow-others=true
+## H2 web admin console
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2
+#spring.h2.console.settings.web-allow-others=true
+#
+## H2 Datasource, default console runs on http://localhost:9393/h2
+#spring.datasource.url=jdbc:h2:file:~/test;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.datasource.driver-class-name=org.h2.Driver
 
-# H2 Datasource, default console runs on http://localhost:9393/h2
-spring.datasource.url=jdbc:h2:file:~/test;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
+# My SQL - The JDBC drivers for MySQL are bundled with data-flow without additional JDBC driver jar required on class path
+spring.datasource.url=jdbc:mysql://localhost:3306/dataflow
+spring.datasource.username=root
+spring.datasource.password=abcD1234!
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 # JPA (JpaBaseConfiguration, HibernateJpaAutoConfiguration)
 spring.jpa.hibernate.ddl-auto=update
@@ -18,7 +24,7 @@ spring.jpa.generate-ddl=true
 
 # Use an external H2 database instance instead of the H2 embedded with Spring Cloud Data Flow
 # when deployed to cloud-foundry
-#spring.dataflow.embedded.database.enable=false
+spring.dataflow.embedded.database.enable=false
 
 # Establish the maximum number of concurrently running tasks to prevent the saturation of IaaS/hardware resources
 # default 20 if not configured
