CMP-5860 #comment create POC code to re-register cloud task app automatically upon service startup and fetch the configuration via config service, enable actuator for troubleshooting

--- a/manifest-dev.yml
+++ b/manifest-dev.yml
@@ -12,3 +12,4 @@ applications:
     SPRING_APPLICATION_JSON: '{"maven": { "remote-repositories": { "repo1": { "url": "https://artifactory.platform.manulife.io/artifactory/libs-release-local"} } } }'
   services:
   - redis-cache-service
+  - config-service
