--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 
+		<pivotal-spring-cloud-services.version>1.4.0.RELEASE</pivotal-spring-cloud-services.version>
+		<spring-cloud-config.version>1.4.0.RELEASE</spring-cloud-config.version>
 		<spring-cloud-dataflow-dependencies.version>1.7.4.RELEASE</spring-cloud-dataflow-dependencies.version>
 		<hibernate.version>5.2.12.Final</hibernate.version>
 
@@ -31,6 +33,14 @@
 
 	<dependencyManagement>
 		<dependencies>
+			<dependency>
+				<groupId>io.pivotal.spring.cloud</groupId>
+				<artifactId>spring-cloud-services-dependencies</artifactId>
+				<version>${pivotal-spring-cloud-services.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dataflow-dependencies</artifactId>
@@ -41,7 +51,25 @@
 		</dependencies>
 	</dependencyManagement>
 
+
+	<!-- Repository -->
 	<repositories>
+		<repository>
+			<id>spring-snapshots</id>
+			<name>Spring Snapshots</name>
+			<url>https://repo.spring.io/libs-snapshot</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+		<repository>
+			<id>spring-milestones</id>
+			<name>Spring Milestones</name>
+			<url>https://repo.spring.io/libs-milestone-local</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
 		<repository>
 			<id>spring-release</id>
 			<name>Spring Releases</name>
@@ -50,13 +78,26 @@
 				<enabled>false</enabled>
 			</snapshots>
 		</repository>
-
-		<!-- In-house repository server to lookup deployed dependencies -->
-		<repository>
-			<id>releases</id>
-			<url>${artifactory.url}/libs-release-local/</url>
-		</repository>
 	</repositories>
+
+	<pluginRepositories>
+		<pluginRepository>
+			<id>spring-snapshots</id>
+			<name>Spring Snapshots</name>
+			<url>https://repo.spring.io/libs-snapshot-local</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</pluginRepository>
+		<pluginRepository>
+			<id>spring-milestones</id>
+			<name>Spring Milestones</name>
+			<url>https://repo.spring.io/libs-milestone-local</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</pluginRepository>
+	</pluginRepositories>
 
 	<dependencies>
 		<dependency>
@@ -88,7 +129,7 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
-			<version>1.4.5.RELEASE</version>
+			<version>${spring-cloud-config.version}</version>
 		</dependency>
 
 		<dependency>
@@ -121,7 +162,12 @@
 				<activeByDefault>true</activeByDefault>
 			</activation>
 			<dependencies>
-
+				<!-- dependency for config server service on Cloud (PCF) -->
+				<dependency>
+					<groupId>io.pivotal.spring.cloud</groupId>
+					<artifactId>spring-cloud-services-starter-config-client</artifactId>
+					<!--<version>1.4.0.RELEASE</version>-->
+				</dependency>
 			</dependencies>
 			<build>
 				<resources>
