--- a/src/main/resources/cloud/application.properties
+++ b/src/main/resources/cloud/application.properties
@@ -1,22 +1,16 @@
 # set the logging for spring cloud task to DEBUG to see the execution process:
 logging.level.org.springframework.cloud.task=DEBUG
 
-## H2 web admin console
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2
-#spring.h2.console.settings.web-allow-others=true
-#
-## H2 Datasource, default console runs on http://localhost:9393/h2
-#spring.datasource.url=jdbc:h2:file:~/test;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.datasource.driver-class-name=org.h2.Driver
+# H2 web admin console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+spring.h2.console.settings.web-allow-others=true
 
-# My SQL - The JDBC drivers for MySQL are bundled with data-flow without additional JDBC driver jar required on class path
-spring.datasource.url=jdbc:mysql://localhost:3306/dataflow
-spring.datasource.username=root
-spring.datasource.password=abcD1234!
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+# H2 Datasource, default console runs on http://localhost:9393/h2
+spring.datasource.url=jdbc:h2:file:~/test;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
 
 # JPA (JpaBaseConfiguration, HibernateJpaAutoConfiguration)
 spring.jpa.hibernate.ddl-auto=update
@@ -28,8 +22,10 @@ spring.dataflow.embedded.database.enable=false
 
 # Establish the maximum number of concurrently running tasks to prevent the saturation of IaaS/hardware resources
 # default 20 if not configured
-spring.cloud.dataflow.task.maximum-concurrent-tasks=200
+spring.cloud.dataflow.task.maximum-concurrent-tasks=20
 
 # Spring Actuator Info Endpoint Configuration
 management.info.git.mode=full
 
+# Disable the analytics feature as it require Redis
+spring.cloud.dataflow.features.analytics-enabled=false
