--- a/src/main/resources/local/application.properties
+++ b/src/main/resources/local/application.properties
@@ -22,7 +22,7 @@ spring.jpa.generate-ddl=true
 
 # Establish the maximum number of concurrently running tasks to prevent the saturation of IaaS/hardware resources
 # default 20 if not configured
-spring.cloud.dataflow.task.maximum-concurrent-tasks=200
+spring.cloud.dataflow.task.maximum-concurrent-tasks=20
 
 # Spring Actuator Info Endpoint Configuration
 management.info.git.mode=full
@@ -30,3 +30,6 @@ management.info.git.mode=full
 # Config Server URL
 # default to http://localhost:8888
 spring.cloud.config.uri=http://localhost:8888
+
+# Disable the analytics feature as it require Redis
+spring.cloud.dataflow.features.analytics-enabled=false
