secure actuator sensitive endpoints

--- a/src/main/resources/local/application.yml
+++ b/src/main/resources/local/application.yml
@@ -22,7 +22,10 @@ spring:
 management:
   contextPath: /management
   security:
-    enabled: false
+    enabled: true
+    user:
+      name: admin
+      password: password
 
 #enable actuator restart endpoint
 endpoints:
