update the commentary

--- a/src/main/resources/local/application.yml
+++ b/src/main/resources/local/application.yml
@@ -17,7 +17,7 @@ spring:
               admin: password, ROLE_VIEW, ROLE_CREATE, ROLE_MANAGE
               guest: guest, ROLE_VIEW
 
-# Disable security to allow access actuator sensitive endpoints
+# Enable security to protect actuator's sensitive endpoints
 # (includes environment, health, beans, metrics, trace, configprops, and dump)
 management:
   contextPath: /management
